fixed flickering menu

--- a/wp-content/themes/DoughRoller_2016/assets/scss/modules/_navigation.scss
+++ b/wp-content/themes/DoughRoller_2016/assets/scss/modules/_navigation.scss
@@ -1,3 +1,6 @@
+/*Fix flickering menu */ .title-bar {display:none}
+
+
 /* Navigation breakpoints */
 
 .desktop-menu, .top-bar-left {
